feat/auth-and-auto, implementação da conexção e configuração para conectar com o mongoDB.
